--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,13 @@
 
 <!-- Warming Up -->
 <script src="http://pupunzi.com/mb.components/mb.YTPlayer/demo/inc/jquery.mb.YTPlayer.js"></script>
+<script charset="utf-8">
+  $(document).ready(function () {
 
+      $(".player").mb_YTPlayer();
+
+  });
+</script>
 <!--Video Section-->
 <section class="content-section video-section">
   <div class="pattern-overlay">
