Validations for user lists

--- a/app/views/phrases/show.html.erb
+++ b/app/views/phrases/show.html.erb
@@ -178,4 +178,6 @@
                    .unbind("mouseup")
                    .unbind("mouseout");
     }
+
+    var dataURL = sigCanvas.toDataURL();
  </script>
