--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -21,7 +21,7 @@
               <span class="pull-left">
               <%= link_to "#{l.phrases.count} Phrases", list_path(l.id) %></span>
               <span class="pull-right">
-              <%= link_to '<i class="fa fa-plus-circle"></i>'.html_safe, list_path(l.id) %></span>
+              <%= link_to '<i class="fa fa-plus-circle"></i>'.html_safe, user_lists_path(:list_id => l.id), method: :post %></span>
               <div class="clearfix"></div>
             </div>
         </div>
