--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,55 +1,74 @@
 <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/lists"><i class="fa fa-bell"></i> Chime <span class="slogan">- Let's learn Chinese!</span></a>
-            </div>
-            <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <% if user_signed_in? %>
-                  <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>
-                        Hello, <%= current_user.first_name %>! <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                          <li>
-                            <%= link_to '<i class="fa fa-fw fa-user"></i> Profile'.html_safe, user_path(current_user) %>
-                          </li>
-                          <li>
-                              <%= link_to '<i class="fa fa-fw fa-gear"></i> Settings'.html_safe, edit_user_registration_path%>
-                          </li>
-                          <li class="divider"></li>
-                          <li>
-                              <%= link_to '<i class="fa fa-sign-out"></i> Log Out'.html_safe, destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-                          </li>
-                      </ul>
-                  </li>
-                <% else %>
-                <li>
-                  <%= link_to '<i class="fa fa-sign-in"></i> Log In'.html_safe, new_user_session_path, :class => 'navbar-link'  %>
-                  </li>
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/lists"><i class="fa fa-bell"></i> Chime <span class="slogan">- Chinese Phrases for Travelers</span></a>
+      </div>
+      <!-- Top Menu Items -->
+      <ul class="nav navbar-right top-nav">
+          <% if user_signed_in? %>
+          <li>
+            <div class="span12">
+              <%= form_tag(phrases_path, :method => "get", id: "custom-search-form", class: "form-search form-horizontal pull-right") do %>
+                <div class="input-append span12">
+                  <%= text_field_tag :search, params[:search], placeholder: "Search", class: "search-query" %>
+                  <!-- <%= submit_tag '<i class="fa fa-search"></i>'.html_safe, name: nil %> -->
+                  <%= button_tag(type: 'submit', class: "btn", name: nil) do %>
+                    <i class="fa fa-search"></i>
+                  <% end %>
+                </div>
                 <% end %>
-            </ul>
-            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-            <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
+              </div>
+              <!-- <form id="custom-search-form" class="form-search form-horizontal pull-right">
+                  <div class="input-append span12">
+                      <input type="text" class="search-query" placeholder="Search">
+                      <button type="submit" class="btn"><i class="fa fa-search"></i></button>
+                  </div>
+              </form> -->
+          </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>
+                  Hello, <%= current_user.first_name %>! <b class="caret"></b></a>
+                <ul class="dropdown-menu">
                     <li>
-                        <%= link_to '<i class="fa fa-list"></i> Lists'.html_safe, lists_path %>
+                      <%= link_to '<i class="fa fa-fw fa-user"></i> Profile'.html_safe, user_path(current_user) %>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-microphone"></i> Listen/Speak</a>
+                        <%= link_to '<i class="fa fa-fw fa-gear"></i> Settings'.html_safe, edit_user_registration_path%>
                     </li>
+                    <li class="divider"></li>
                     <li>
-                        <a href="#"><i class="fa fa-pencil-square-o"></i> Write/Practice</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-file-text-o"></i> Read/Recognize</a>
+                        <%= link_to '<i class="fa fa-sign-out"></i> Log Out'.html_safe, destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
                     </li>
                 </ul>
-            </div> -->
-            <!-- /.navbar-collapse -->
-        </nav>
+            </li>
+          <% else %>
+          <li>
+            <%= link_to '<i class="fa fa-sign-in"></i> Log In'.html_safe, new_user_session_path, :class => 'navbar-link'  %>
+            </li>
+          <% end %>
+      </ul>
+      <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+      <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav side-nav">
+              <li>
+                  <%= link_to '<i class="fa fa-list"></i> Lists'.html_safe, lists_path %>
+              </li>
+              <li>
+                  <a href="#"><i class="fa fa-microphone"></i> Listen/Speak</a>
+              </li>
+              <li>
+                  <a href="#"><i class="fa fa-pencil-square-o"></i> Write/Practice</a>
+              </li>
+              <li>
+                  <a href="#"><i class="fa fa-file-text-o"></i> Read/Recognize</a>
+              </li>
+          </ul>
+      </div> -->
+      <!-- /.navbar-collapse -->
+  </nav>
