--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-lg-12">
         <h1>Chime</h1>
-        <h3><a href="/lists" class="main_link">Chinese Phrases for Travelers</a></h3>
+        <h3><a href="/lists" class="main_link">Practical Chinese To-Go</a></h3>
         <h3>我們學中文吧!</h3>
         <center><button class="btn btn-primary" data-toggle="modal" data-target="#logIn"><i class="fa fa-sign-in"></i> Log In</button>
         </center>
