--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700italic' rel='stylesheet' type='text/css'>
   <link rel="import" href="http://localhost:3000/voice-elements/voice-player.html">
   <link rel="import" href="http://localhost:3000/voice-elements/voice-recognition.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <% if current_page?(root_path) %>
