--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= favicon_link_tag '/assets/favicon.ico' %>
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700italic' rel='stylesheet' type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="import" href="http://localhost:3000/voice-elements/voice-player.html">
   <link rel="import" href="http://localhost:3000/voice-elements/voice-recognition.html">
   <meta name="viewport" content="width=device-width, initial-scale=1">
